Docs changes for 1.0.0-rc1 (#824)
* Doc changes for 1.0.0